--- a/app/src/main/res/layout/fragment_monthly_list.xml
+++ b/app/src/main/res/layout/fragment_monthly_list.xml
@@ -14,7 +14,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#E4E4E4">
 
             <TextView
                 android:id="@+id/txtErrorMonthly"
